apps/searxng/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  namespace: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      containers:
        - name: searxng
          image: searxng/searxng:2025.8.12-6b1516d
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /etc/searxng/settings.yml
              subPath: settings.yml
              readOnly: true
            - name: searxng-persistent-data
              mountPath: /var/cache/searxng
      volumes:
        - name: config-volume
          configMap:
            name: searxng-config
        - name: searxng-persistent-data
          persistentVolumeClaim:
            claimName: searxng-persistent-data-lvmhdd
