apps/searxng/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: searxng
  name: searxng
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx-ingress
  rules:
    - host: searxng.lumpiasty.xyz
      http:
        paths:
          - backend:
              service:
                name: searxng
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - searxng.lumpiasty.xyz
      secretName: searxng-ingress
